--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 <html>
 
 <head>
-  <title>First build app</title>
+  <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 
 <body>
+  <div> Build at:<%= htmlWebpackPlugin.options.buildTime %> </div>
   <div id="root"></div>
 </body>
 
